--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 node_modules
-.env*
 coverage
 coverage.json
 typechain
@@ -11,3 +10,7 @@ artifacts
 package-lock.json
 note.txt
 note.js
+.mainnet
+.secret
+.banker
+.env*
